[package]
name = "read-through-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.10.0", features = ["full"] }
lru = "0.7.5"
once_cell = "1.7.2"
async-trait = "0.1.53"
tracing = "0.1.25"
